@@ -45,6 +45,11 @@ Backend
 Administration / Customization
 -------------------------------------------------------------------------------
 
+* Content-length Header is now enabled by default
+
+The Typoscript setting config.enableContentLengthHeader has a new default
+value and is now enabled by default.
+
 -------------------------------------------------------------------------------
 Extbase
 -------------------------------------------------------------------------------
